--- a/index.html
+++ b/index.html
@@ -40,8 +40,52 @@
 
       </div>
 
-      
+      <!-- Hero section -->
+      <div class="heroContainer">
+        <div class="hero">
+          <p class="hero1p">Design System For GenZ</p>
+          <h2>Unleash Your Inner Design Sloth Today.</h2>
+          <p class="hero2p">Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet.
+            Cras fermentum odio eu feugiat pretium nibh ipsum. Venenatis cras
+            sed felis eget velit aliquet.</p>
+        </div>
+        <div class="appButton">
+          <div>
+            <img src="./assets/ButtonAppStore1.webp" alt="">
+          </div>
+          <div>
+            <img src="./assets/ButtonAppStore2.webp" alt="">
+          </div>
+        </div>
+        <div class="heroImg">
+          <img src="./assets/Frame.webp" alt="">
+        </div>
+      </div>
+
     </header>
+
+    <main>
+      <!-- company  -->
+       <div class="company">
+        <div class="company1">
+          <img src="./assets/companylogo/Company Logo.svg" alt="">
+          <img src="./assets/companylogo/Company Logo (1).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (2).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (3).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (4).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (5).svg" alt="">
+        </div>
+
+        <div class="company1">
+          <img src="./assets/companylogo/Company Logo (6).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (7).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (8).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (9).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (10).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (11).svg" alt="">
+        </div>
+       </div>
+    </main>
 
     <!-- Link to JS -->
     <script src="js/script.js"></script>
