--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,14 +16,15 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-
     <!-- Navbar -->
     <header class="navbar">
-      <div class="container">
+      <div class="navbar-container">
         <div class="logo">
-          <div class="logoimg">
-            <img src="./assets/logo.webp" alt>
-          </div>
+          <img
+            class="logoimg"
+            src="./assets/logo.webp"
+            alt="SlothUI logo"
+          />
           <h1>slothui</h1>
         </div>
 
@@ -34,60 +36,72 @@
         </nav>
 
         <div class="navRight">
-          <div class="btn1">Sign Up</div>
-          <div class="btn2">Log In</div>
+          <button class="btn1">Sign Up</button>
+          <button class="btn2">Log In</button>
         </div>
-
       </div>
+    </header>
 
-      <!-- Hero section -->
+    <!-- Hero Section -->
+    <main>
       <div class="heroContainer">
         <div class="hero">
           <p class="hero1p">Design System For GenZ</p>
           <h2>Unleash Your Inner Design Sloth Today.</h2>
-          <p class="hero2p">Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet.
-            Cras fermentum odio eu feugiat pretium nibh ipsum. Venenatis cras
-            sed felis eget velit aliquet.</p>
+          <p class="hero2p">
+            Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Cras
+            fermentum odio eu feugiat pretium nibh ipsum. Venenatis cras sed felis
+            eget velit aliquet.
+          </p>
         </div>
         <div class="appButton">
-          <div>
-            <img src="./assets/ButtonAppStore1.webp" alt="">
-          </div>
-          <div>
-            <img src="./assets/ButtonAppStore2.webp" alt="">
-          </div>
+          <img
+            src="./assets/ButtonAppStore1.webp"
+            alt="Download on App Store"
+          />
+          <img
+            src="./assets/ButtonAppStore2.webp"
+            alt="Get it on Google Play"
+          />
         </div>
         <div class="heroImg">
-          <img src="./assets/Frame.webp" alt="">
+          <img src="./assets/Frame.webp" alt="Hero illustration" />
         </div>
       </div>
 
-    </header>
-
-    <main>
-      <!-- company  -->
-       <div class="company">
+      <!-- Company Section -->
+      <div class="company">
         <div class="company1">
-          <img src="./assets/companylogo/Company Logo.svg" alt="">
-          <img src="./assets/companylogo/Company Logo (1).svg" alt="">
-          <img src="./assets/companylogo/Company Logo (2).svg" alt="">
-          <img src="./assets/companylogo/Company Logo (3).svg" alt="">
-          <img src="./assets/companylogo/Company Logo (4).svg" alt="">
-          <img src="./assets/companylogo/Company Logo (5).svg" alt="">
+          <img src="./assets/companylogo/Company Logo.svg" alt="Company logo 1" loading="lazy" />
+          <img src="./assets/companylogo/Company Logo (1).svg" alt="Company logo 2" loading="lazy" />
+          <img src="./assets/companylogo/Company Logo (2).svg" alt="Company logo 2" loading="lazy" />
+          <img src="./assets/companylogo/Company Logo (3).svg" alt="Company logo 2" loading="lazy" />
+          <img src="./assets/companylogo/Company Logo (4).svg" alt="Company logo 2" loading="lazy" />
+          <img src="./assets/companylogo/Company Logo (5).svg" alt="Company logo 2" loading="lazy" />
         </div>
-
         <div class="company1">
-          <img src="./assets/companylogo/Company Logo (6).svg" alt="">
-          <img src="./assets/companylogo/Company Logo (7).svg" alt="">
-          <img src="./assets/companylogo/Company Logo (8).svg" alt="">
-          <img src="./assets/companylogo/Company Logo (9).svg" alt="">
-          <img src="./assets/companylogo/Company Logo (10).svg" alt="">
-          <img src="./assets/companylogo/Company Logo (11).svg" alt="">
+          <img src="./assets/companylogo/Company Logo (6).svg" alt="Company logo 7" loading="lazy" />
+          <img src="./assets/companylogo/Company Logo (7).svg" alt="Company logo 7" loading="lazy" />
+          <img src="./assets/companylogo/Company Logo (8).svg" alt="Company logo 7" loading="lazy" />
+          <img src="./assets/companylogo/Company Logo (9).svg" alt="Company logo 7" loading="lazy" />
+          <img src="./assets/companylogo/Company Logo (10).svg" alt="Company logo 7" loading="lazy" />
         </div>
-       </div>
+      </div>
+
+      <!-- Our Main Features -->
+      <div class="Container">
+        <div class="features-hero">
+          <p class="hero1p">Our Main Features</p>
+          <h2 class="title">Our Primary Features</h2>
+          <p class="hero2p">
+            Volutpat commodo sed egestas egestas fringilla phasellus. Tincidunt
+            eget nullam non nisi. Nisi porta lorem mollis aliquam ut porttitor
+            leo.
+          </p>
+        </div>
+      </div>
     </main>
 
-    <!-- Link to JS -->
     <script src="js/script.js"></script>
   </body>
 </html>
