added Primary Features cards

--- a/index.html
+++ b/index.html
@@ -89,17 +89,55 @@
       </div>
 
       <!-- Our Main Features -->
-      <div class="Container">
-        <div class="features-hero">
-          <p class="hero1p">Our Main Features</p>
-          <h2 class="title">Our Primary Features</h2>
-          <p class="hero2p">
-            Volutpat commodo sed egestas egestas fringilla phasellus. Tincidunt
-            eget nullam non nisi. Nisi porta lorem mollis aliquam ut porttitor
-            leo.
-          </p>
-        </div>
-      </div>
+<div class="Container">
+  <div class="features-hero">
+    <p class="hero1p">Our Main Features</p>
+    <h2 class="title">Our Primary Features</h2>
+    <p class="hero2p">
+      Volutpat commodo sed egestas egestas fringilla phasellus. Tincidunt eget nullam non nisi. Nisi porta lorem mollis aliquam ut porttitor leo.
+    </p>
+  </div>
+
+  <!-- Primary Features -->
+  <div class="features-container">
+    <!-- 1st Feature -->
+    <div class="feature-item">
+      <img src="./assets/features/Lightning.svg" alt="Lazy Efficient icon">
+      <h3>Lazy Efficient</h3>
+      <p>A cras semper auctor neque. Proin libero nunc consequat interdum varius sit. Libero volutpat sed cras ornare arcu dui vivamus arcu felis.</p>
+    </div>
+    <!-- 2nd Feature -->
+    <div class="feature-item">
+      <img src="./assets/features/GearSix.svg" alt="Streamlined Process icon">
+      <h3>Streamlined Process</h3>
+      <p>Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Orci porta non pulvinar neque laoreet.</p>
+    </div>
+    <!-- 3rd Feature -->
+    <div class="feature-item">
+      <img src="./assets/features/Broom.svg" alt="Minimal Effort icon">
+      <h3>Minimal Effort</h3>
+      <p>Tincidunt eget nullam non nisi est sit amet facilisis magna. Rhoncus dolor purus non enim praesent elementum.</p>
+    </div>
+    <!-- 4th Feature -->
+    <div class="feature-item">
+      <img src="./assets/features/ChartLine.svg" alt="Absolutely Easy To Use icon">
+      <h3>Absolutely Easy To Use</h3>
+      <p>Rutrum quisque non tellus orci ac. Purus viverra accumsan in nisl. Id interdum velit laoreet id donec ultrices adisipicing elit.</p>
+    </div>
+    <!-- 5th Feature -->
+    <div class="feature-item">
+      <img src="./assets/features/BowlFood.svg" alt="Just Sleep & Chill icon">
+      <h3>Just Sleep & Chill</h3>
+      <p>Bibendum est ultricies integer quis auctor elit. Ultrices in iaculis nunc sed. A scelerisque purus semper eget. Facilisi morbi tempus iaculi.</p>
+    </div>
+    <!-- 6th Feature -->
+    <div class="feature-item">
+      <img src="./assets/features/SmileyWink.svg" alt="Don't Worry About Life icon">
+      <h3>Don't Worry About Life</h3>
+      <p>Pharetra diam sit amet nisl suscipit adipiscing bibendum est. Risus ultricies tristique nulla aliquet enim tortor.</p>
+    </div>
+  </div>
+</div>
     </main>
 
     <script src="js/script.js"></script>
