--- a/index.html
+++ b/index.html
@@ -102,42 +102,71 @@
   <div class="features-container">
     <!-- 1st Feature -->
     <div class="feature-item">
-      <img src="./assets/features/Lightning.svg" alt="Lazy Efficient icon">
+      <img src="./assets/features/Lightning.svg" alt="Lazy Efficient icon" loading="lazy" >
       <h3>Lazy Efficient</h3>
       <p>A cras semper auctor neque. Proin libero nunc consequat interdum varius sit. Libero volutpat sed cras ornare arcu dui vivamus arcu felis.</p>
     </div>
     <!-- 2nd Feature -->
     <div class="feature-item">
-      <img src="./assets/features/GearSix.svg" alt="Streamlined Process icon">
+      <img src="./assets/features/GearSix.svg" alt="Streamlined Process icon" loading="lazy" >
       <h3>Streamlined Process</h3>
       <p>Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Orci porta non pulvinar neque laoreet.</p>
     </div>
     <!-- 3rd Feature -->
     <div class="feature-item">
-      <img src="./assets/features/Broom.svg" alt="Minimal Effort icon">
+      <img src="./assets/features/Broom.svg" alt="Minimal Effort icon" loading="lazy" >
       <h3>Minimal Effort</h3>
       <p>Tincidunt eget nullam non nisi est sit amet facilisis magna. Rhoncus dolor purus non enim praesent elementum.</p>
     </div>
     <!-- 4th Feature -->
     <div class="feature-item">
-      <img src="./assets/features/ChartLine.svg" alt="Absolutely Easy To Use icon">
+      <img src="./assets/features/ChartLine.svg" alt="Absolutely Easy To Use icon" loading="lazy" >
       <h3>Absolutely Easy To Use</h3>
       <p>Rutrum quisque non tellus orci ac. Purus viverra accumsan in nisl. Id interdum velit laoreet id donec ultrices adisipicing elit.</p>
     </div>
     <!-- 5th Feature -->
     <div class="feature-item">
-      <img src="./assets/features/BowlFood.svg" alt="Just Sleep & Chill icon">
+      <img src="./assets/features/BowlFood.svg" alt="Just Sleep & Chill icon" loading="lazy" >
       <h3>Just Sleep & Chill</h3>
       <p>Bibendum est ultricies integer quis auctor elit. Ultrices in iaculis nunc sed. A scelerisque purus semper eget. Facilisi morbi tempus iaculi.</p>
     </div>
     <!-- 6th Feature -->
     <div class="feature-item">
-      <img src="./assets/features/SmileyWink.svg" alt="Don't Worry About Life icon">
+      <img src="./assets/features/SmileyWink.svg" alt="Don't Worry About Life icon" loading="lazy" >
       <h3>Don't Worry About Life</h3>
       <p>Pharetra diam sit amet nisl suscipit adipiscing bibendum est. Risus ultricies tristique nulla aliquet enim tortor.</p>
     </div>
   </div>
 </div>
+
+    <!-- result section -->
+    <div class="Container resultBg">
+      <div class="features-hero">
+        <div class="resultIcon">
+          <img src="./assets/Vector.svg" alt="">
+        </div>
+        <h2 class="title">Work lazily and  achieve the result you want.</h2>
+        <p class="hero2p">
+          Liquam id diam maecenas ultricies mi eget mauris pharetra et. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Fermentum iaculis eu non diam.
+        </p>
+      </div>
+
+      <div class="result-count">
+        <div class="result-count1">
+          <h2 class="resultH2">420%</h2>
+          <p class="resultP">Data Efficiency</p>
+        </div>
+        <div class="result-count1">
+          <h2 class="resultH2">708+</h2>
+          <p class="resultP">Conversion Rate</p>
+        </div>
+        <div class="result-count2">
+          <h2 class="resultH2">1.82M</h2>
+          <p class="resultP">AI LLM Scale</p>
+        </div>
+      </div>
+
+    </div>
     </main>
 
     <script src="js/script.js"></script>
