--- a/index.html
+++ b/index.html
@@ -167,6 +167,47 @@
       </div>
 
     </div>
+
+    <!-- Who is it for? -->
+<div class="Container-who">
+
+  <div class="who-text ">
+    <p class="hero1p">Who is it for?</p>
+  <h2 class="whoTitle">What the procrastinators say</h2>
+  <p class="description">
+    Mi ipsum faucibus vitae aliquet nec. At tempor commodo ullamcorper a lacus. Bibendum at varius vel pharetra vel.
+  </p>
+  </div>
+
+  <!-- Steps -->
+  <div class="steps-container">
+    <!-- Steps -->
+    <div class="steps">
+      <!-- 1 -->
+      <div class="steps1Bordder">
+        <h3>Convallis tellus id interdum velit</h3>
+        <p>Est pellentesque elit ullamcorper dignissim cras. In pellentesque massa placerat duis ultricies.</p>
+      </div>
+      <!-- 2 -->
+      <div class="steps1Bordder1">
+        <h3>Id interdum velit laoreet id donec ultrices</h3>
+        <p>Donec massa sapien faucibus et molestie ac feugiat sed. Congue mauris rhoncus aenean vel elit scelerisque.</p>
+      </div>
+      <!-- 3 -->
+      <div class="steps1Bordder1">
+        <h3>Sapien et ligula ullamcorper malesuada</h3>
+        <p>Donec massa sapien faucibus et molestie ac feugiat sed. Congue mauris rhoncus aenean vel elit scelerisque.</p>
+      </div>
+    </div>
+    <!-- Image -->
+    <div>
+      <img src="./assets/FrameWho.svg" alt="Illustration for Who is it for section">
+    </div>
+  </div>
+</div>
+
+
+
     </main>
 
     <script src="js/script.js"></script>
