--- a/index.html
+++ b/index.html
@@ -206,6 +206,159 @@
   </div>
 </div>
 
+   <!-- Testimonials -->
+   <div class="Container">
+    <div class="features-hero">
+      <p class="hero1p">Testimonials</p>
+      <h2 class="title">What People Say</h2>
+      <p class="hero2p">
+        You can visit our office anytime but please don’t stalk us or don’t be creepy.
+      </p>
+    </div>
+
+    <!-- people Testimonials -->
+    <div class="testimonialCards">
+      <div class="testimonialCardContainer">
+        <!-- 1 -->
+      <div class="testimonialCard">
+        <img class="testimonialCardImg" src="./assets/testimonials/Rating.svg" alt="" laoding="lazy" />
+        <p class="testimonialCardDescrip">Lorem ipsum dolor sit amet, consectetur ad-zzz-ing elit. Proin vel urna at metus tempor mattis, or not, whatever.</p>
+        <div class="testimonialAuthor">
+          <div>
+            <img src="./assets/testimonials/Avatar.svg" alt="" loading="lazy">
+          </div>
+          <div>
+            <h2>X_AE_A-13</h2>
+            <p>Product Designer, slothUI</p>
+          </div>
+        </div>
+      </div>
+      <!-- 2 -->
+      <div class="testimonialCard">
+        <img class="testimonialCardImg" src="./assets/testimonials/Rating.svg" alt="" laoding="lazy" />
+        <p class="testimonialCardDescrip">Nisi porta lorem mollis aliquam ut porttitor leo. Sed odio morbi quis commodo. Arcu non odio euismod lacinia at quis. Nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae.</p>
+        <div class="testimonialAuthor">
+          <div>
+            <img src="./assets/testimonials/Avatar (3).svg" alt="" loading="lazy">
+          </div>
+          <div>
+            <h2>Oarack Babama</h2>
+            <p>Former President of US</p>
+          </div>
+        </div>
+      </div>
+      <!-- 3 -->
+      <div class="testimonialCard">
+        <img class="testimonialCardImg" src="./assets/testimonials/Rating (4).svg" alt="" laoding="lazy" />
+        <p class="testimonialCardDescrip">Sagittis eu volutpat odio facilisis mauris sit amet massa. Urna et pharetra pharetra massa.</p>
+        <div class="testimonialAuthor">
+          <div>
+            <img src="./assets/testimonials/Avatar (6).svg" alt="" loading="lazy">
+          </div>
+          <div>
+            <h2>Boe Jiden</h2>
+            <p>Former President Of Canada</p>
+          </div>
+        </div>
+      </div>
+      </div>
+
+      <div class="testimonialCardContainer">
+        
+      <!-- 4 -->
+      <div class="testimonialCard">
+        <img class="testimonialCardImg" src="./assets/testimonials/Rating (1).svg" alt="" laoding="lazy" />
+        <p class="testimonialCardDescrip">Posuere urna nec tincidunt praesent semper feugiat nibh sed. Velit dignissim sodales ut eu.</p>
+        <div class="testimonialAuthor">
+          <div>
+            <img src="./assets/testimonials/Avatar (1).svg" alt="" loading="lazy">
+          </div>
+          <div>
+            <h2>Azunyan U. Wu</h2>
+            <p>CEO, nextlife.ai</p>
+          </div>
+        </div>
+      </div>
+      <!-- 5 -->
+      <div class="testimonialCard">
+        <img class="testimonialCardImg" src="./assets/testimonials/Rating (3).svg" alt="" laoding="lazy" />
+        <p class="testimonialCardDescrip">Accumsan tortor posuere ac ut consequat. Quis varius quam quisque id diam vel. Commodo odio aenean sed adipiscing diam donec adipiscing. Vel pharetra vel turpis nunc eget.</p>
+        <div class="testimonialAuthor">
+          <div>
+            <img src="./assets/testimonials/Avatar (4).svg" alt="" loading="lazy">
+          </div>
+          <div>
+            <h2>Saylor Twift</h2>
+            <p>Famous Singer</p>
+          </div>
+        </div>
+      </div>
+      <!-- 6 -->
+      <div class="testimonialCard">
+        <img class="testimonialCardImg" src="./assets/testimonials/Rating.svg" alt="" laoding="lazy" />
+        <p class="testimonialCardDescrip"> Cras fermentum odio eu feugiat pretium nibh ipsum consequat nisl. Nec nam aliquam sem et tortor consequat id porta nibh. Viverra suspendisse. Lacus sed viverra tellus in hac habitasse platea dictumst. Elit at imperdiet dui accumsan.</p>
+        <div class="testimonialAuthor">
+          <div>
+            <img src="./assets/testimonials/Avatar (7).svg" alt="" loading="lazy">
+          </div>
+          <div>
+            <h2>Vermillion D. Gray</h2>
+            <p>CEO, hacklife.ai</p>
+          </div>
+        </div>
+      </div>
+      </div>
+
+      <div class="testimonialCardContainer">
+        
+      <!-- 7 -->
+      <div class="testimonialCard">
+        <img class="testimonialCardImg" src="./assets/testimonials/Rating (2).svg" alt="" laoding="lazy" />
+        <p class="testimonialCardDescrip">Sit amet est placerat in. Blandit cursus risus at ultrices mi tempus imperdiet. Volutpat commodo sed egestas egestas fringilla phasellus. Tincidunt eget nullam non nisi. </p>
+        <div class="testimonialAuthor">
+          <div>
+            <img src="./assets/testimonials/Avatar (2).svg" alt="" loading="lazy">
+          </div>
+          <div>
+            <h2>Mechatronics Yi</h2>
+            <p>CTO, fin4win.ai</p>
+          </div>
+        </div>
+      </div>
+      <!-- 8 -->
+      <div class="testimonialCard">
+        <img class="testimonialCardImg" src="./assets/testimonials/Rating (1).svg" alt="" laoding="lazy" />
+        <p class="testimonialCardDescrip">Venenatis cras sed felis eget velit aliquet. Velit scelerisque in dictum non consectetur. Felis eget velit aliquet sagittis. Ultricies integer quis auctor elit sed vulputate mi.</p>
+        <div class="testimonialAuthor">
+          <div>
+            <img src="./assets/testimonials/Avatar (5).svg" alt="" loading="lazy">
+          </div>
+          <div>
+            <h2>Asuna Yuuki</h2>
+            <p>Virtual Swordsman</p>
+          </div>
+        </div>
+      </div>
+      <!-- 9 -->
+      <div class="testimonialCard">
+        <img class="testimonialCardImg" src="./assets/testimonials/Rating (2).svg" alt="" laoding="lazy" />
+        <p class="testimonialCardDescrip">Viverra accumsan in nisl  nisi scelerisque eu. Vitae congue eu consequat ac felis donec. </p>
+        <div class="testimonialAuthor">
+          <div>
+            <img src="./assets/testimonials/Avatar (8).svg" alt="" loading="lazy">
+          </div>
+          <div>
+            <h2>Zuckman Wu</h2>
+            <p>CEO, tech4life.ai</p>
+          </div>
+        </div>
+      </div>
+      </div>
+
+    </div>
+
+    </div>
+
 
 
     </main>
