--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 </div>
 
    <!-- Testimonials -->
-   <div class="Container">
+   <div class="Container testimonialBg">
     <div class="features-hero">
       <p class="hero1p">Testimonials</p>
       <h2 class="title">What People Say</h2>
