added- Let’s Download The App section

--- a/index.html
+++ b/index.html
@@ -579,7 +579,31 @@
 
 
         </div>
+      
+        <!-- Download the App Section -->
+  <div class="downloadApp">
+    <div class="downloadAppContainer">
+      <!-- Text -->
+    <div class="downloadAppText">
+      <h2 class="title">Let’s Download The App.</h2>
+      <p>Velit scelerisque in dictum non consectetur. Felis eget velit aliquet sagittis. Ultricies integer quis auctor elit sed vulputate mi. Massa id neque aliquam vestibulum morbi blandit cursus.</p>
+      <div class="downloadButton">
+        <button class="btn3">Learn More</button>
+        <button class="btn2">Get Started</button>
       </div>
+    </div>
+    <!-- Image -->
+    <div class="downloadAppImg">
+      <div>
+        <img class="firstPhoneImg" src="./assets/MockUp.svg" alt="phone frame" loading="lazy">
+      </div>
+      <div>
+        <img class="secondPhoneImg" src="./assets/MockUp (1).svg" alt="phone frame" loading="lazy">
+      </div>
+    </div>
+    </div>
+  </div>
+         <!-- Footer -->
 
     </main>
 
