added footer section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             class="logoimg"
             src="./assets/logo.webp"
             alt="SlothUI logo" />
-          <h1>slothui</h1>
         </div>
 
         <nav class="navCenter">
@@ -589,7 +588,7 @@
       <p>Velit scelerisque in dictum non consectetur. Felis eget velit aliquet sagittis. Ultricies integer quis auctor elit sed vulputate mi. Massa id neque aliquam vestibulum morbi blandit cursus.</p>
       <div class="downloadButton">
         <button class="btn3">Learn More</button>
-        <button class="btn2">Get Started</button>
+        <button class="btn4">Get Started</button>
       </div>
     </div>
     <!-- Image -->
@@ -603,9 +602,99 @@
     </div>
     </div>
   </div>
-         <!-- Footer -->
-
+          
     </main>
+
+    <footer>
+      <div class="footerContainer">
+        <!-- 1 -->
+         <div>
+          <h2>Site Map</h2>
+          <ul>
+            <li>Homepage</li>
+            <li>Product</li>
+            <li>Services</li>
+            <li>Technology</li>
+            <li>About Us</li>
+            <li>Contact Us</li>
+          </ul>
+         </div>
+        <!-- 2 -->
+         <div>
+          <h2>Services</h2>
+          <ul>
+            <li>Service Lineup 1</li>
+            <li>Service Lineup 2</li>
+            <li>Service Lineup 3</li>
+            <li>Service Lineup 4</li>
+            <li>Service Lineup 5</li>
+            <li>Service Lineup 6</li>
+          </ul>
+         </div>
+         <!-- 3 -->
+          <div>
+           <h2>Product</h2>
+           <ul>
+             <li>Product Lineup 1</li>
+             <li>Product Lineup 2</li>
+             <li>Product Lineup 3</li>
+             <li>Product Lineup 4</li>
+             <li>Product Lineup 5</li>
+             <li>Product Lineup 6</li>
+           </ul>
+          </div>
+          <!-- 4 -->
+           <div>
+            <h2>Help & Support</h2>
+            <ul>
+              <li>Live Chat</li>
+              <li>Email Support</li>
+              <li>Product Refund</li>
+              <li>Submit Feedback</li>
+              <li>Help Ticket</li>
+              <li>Call Center</li>
+            </ul>
+           </div>
+           <!-- 5 -->
+            <div>
+             <h2>Legal</h2>
+             <ul>
+               <li>Privacy Policy</li>
+               <li>HIPAA Notice</li>
+               <li>Data Policy</li>
+               <li>AI Privacy</li>
+               <li>Terms & Conditions</li>
+               <li>Lawyer’s Corner</li>
+             </ul>
+            </div>
+            <!-- 6 -->
+             <div>
+              <h2>Pricing</h2>
+              <ul>
+                <li>Pricing Tier 1</li>
+                <li>Pricing Tier 2</li>
+                <li>Pricing Tier 3</li>
+                <li>Pricing Tier 4</li>
+                <li>Pricing Tier 5</li>
+                <li>Pricing Tier 6</li>
+              </ul>
+             </div>
+      </div>
+      <div class="footerBottom">
+        <div class="logo">
+          <img
+            class="logoimg"
+            src="./assets/logo.webp"
+            alt="SlothUI logo" />
+        </div>
+        <div class="footerCenterImg">
+          <img src="./assets/CaretUp.svg" alt="">
+        </div>
+        <div>
+          <p>Copyright 2028 slothUI, All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/script.js"></script>
   </body>
