--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="Container resultBg">
         <div class="features-hero">
           <div class="resultIcon">
-            <img src="./assets/Vector.svg" alt>
+            <img src="./assets/Vector.svg" alt="Result icon" loading="lazy">
           </div>
           <h2 class="title">Work lazily and achieve the result you want.</h2>
           <p class="hero2p">
@@ -256,13 +256,13 @@
             <!-- 1 -->
             <div class="testimonialCard">
               <img class="testimonialCardImg"
-                src="./assets/testimonials/Rating.svg" alt laoding="lazy" />
+                src="./assets/testimonials/Rating.svg" alt="testimonial" laoding="lazy" />
               <p class="testimonialCardDescrip">Lorem ipsum dolor sit amet,
                 consectetur ad-zzz-ing elit. Proin vel urna at metus tempor
                 mattis, or not, whatever.</p>
               <div class="testimonialAuthor">
                 <div>
-                  <img src="./assets/testimonials/Avatar.svg" alt
+                  <img src="./assets/testimonials/Avatar.svg" alt="testimonial"
                     loading="lazy">
                 </div>
                 <div>
@@ -274,14 +274,14 @@
             <!-- 2 -->
             <div class="testimonialCard">
               <img class="testimonialCardImg"
-                src="./assets/testimonials/Rating.svg" alt laoding="lazy" />
+                src="./assets/testimonials/Rating.svg" alt="testimonial" laoding="lazy" />
               <p class="testimonialCardDescrip">Nisi porta lorem mollis aliquam
                 ut porttitor leo. Sed odio morbi quis commodo. Arcu non odio
                 euismod lacinia at quis. Nec sagittis aliquam malesuada bibendum
                 arcu vitae elementum curabitur vitae.</p>
               <div class="testimonialAuthor">
                 <div>
-                  <img src="./assets/testimonials/Avatar (3).svg" alt
+                  <img src="./assets/testimonials/Avatar (3).svg" alt="testimonial"
                     loading="lazy">
                 </div>
                 <div>
@@ -293,13 +293,13 @@
             <!-- 3 -->
             <div class="testimonialCard">
               <img class="testimonialCardImg"
-                src="./assets/testimonials/Rating (4).svg" alt laoding="lazy" />
+                src="./assets/testimonials/Rating (4).svg" alt="testimonial" laoding="lazy" />
               <p class="testimonialCardDescrip">Sagittis eu volutpat odio
                 facilisis mauris sit amet massa. Urna et pharetra pharetra
                 massa.</p>
               <div class="testimonialAuthor">
                 <div>
-                  <img src="./assets/testimonials/Avatar (6).svg" alt
+                  <img src="./assets/testimonials/Avatar (6).svg" alt="testimonial"
                     loading="lazy">
                 </div>
                 <div>
@@ -315,13 +315,13 @@
             <!-- 4 -->
             <div class="testimonialCard">
               <img class="testimonialCardImg"
-                src="./assets/testimonials/Rating (1).svg" alt laoding="lazy" />
+                src="./assets/testimonials/Rating (1).svg" alt="testimonial" laoding="lazy" />
               <p class="testimonialCardDescrip">Posuere urna nec tincidunt
                 praesent semper feugiat nibh sed. Velit dignissim sodales ut
                 eu.</p>
               <div class="testimonialAuthor">
                 <div>
-                  <img src="./assets/testimonials/Avatar (1).svg" alt
+                  <img src="./assets/testimonials/Avatar (1).svg" alt="testimonial"
                     loading="lazy">
                 </div>
                 <div>
@@ -333,14 +333,14 @@
             <!-- 5 -->
             <div class="testimonialCard">
               <img class="testimonialCardImg"
-                src="./assets/testimonials/Rating (3).svg" alt laoding="lazy" />
+                src="./assets/testimonials/Rating (3).svg" alt="testimonial" laoding="lazy" />
               <p class="testimonialCardDescrip">Accumsan tortor posuere ac ut
                 consequat. Quis varius quam quisque id diam vel. Commodo odio
                 aenean sed adipiscing diam donec adipiscing. Vel pharetra vel
                 turpis nunc eget.</p>
               <div class="testimonialAuthor">
                 <div>
-                  <img src="./assets/testimonials/Avatar (4).svg" alt
+                  <img src="./assets/testimonials/Avatar (4).svg" alt="testimonial"
                     loading="lazy">
                 </div>
                 <div>
@@ -352,7 +352,7 @@
             <!-- 6 -->
             <div class="testimonialCard">
               <img class="testimonialCardImg"
-                src="./assets/testimonials/Rating.svg" alt laoding="lazy" />
+                src="./assets/testimonials/Rating.svg" alt="testimonial" laoding="lazy" />
               <p class="testimonialCardDescrip"> Cras fermentum odio eu feugiat
                 pretium nibh ipsum consequat nisl. Nec nam aliquam sem et tortor
                 consequat id porta nibh. Viverra suspendisse. Lacus sed viverra
@@ -360,7 +360,7 @@
                 accumsan.</p>
               <div class="testimonialAuthor">
                 <div>
-                  <img src="./assets/testimonials/Avatar (7).svg" alt
+                  <img src="./assets/testimonials/Avatar (7).svg" alt="testimonial"
                     loading="lazy">
                 </div>
                 <div>
@@ -376,14 +376,14 @@
             <!-- 7 -->
             <div class="testimonialCard">
               <img class="testimonialCardImg"
-                src="./assets/testimonials/Rating (2).svg" alt laoding="lazy" />
+                src="./assets/testimonials/Rating (2).svg" alt="testimonial" laoding="lazy" />
               <p class="testimonialCardDescrip">Sit amet est placerat in.
                 Blandit cursus risus at ultrices mi tempus imperdiet. Volutpat
                 commodo sed egestas egestas fringilla phasellus. Tincidunt eget
                 nullam non nisi. </p>
               <div class="testimonialAuthor">
                 <div>
-                  <img src="./assets/testimonials/Avatar (2).svg" alt
+                  <img src="./assets/testimonials/Avatar (2).svg" alt="testimonial"
                     loading="lazy">
                 </div>
                 <div>
@@ -395,14 +395,14 @@
             <!-- 8 -->
             <div class="testimonialCard">
               <img class="testimonialCardImg"
-                src="./assets/testimonials/Rating (1).svg" alt laoding="lazy" />
+                src="./assets/testimonials/Rating (1).svg" alt="testimonial" laoding="lazy" />
               <p class="testimonialCardDescrip">Venenatis cras sed felis eget
                 velit aliquet. Velit scelerisque in dictum non consectetur.
                 Felis eget velit aliquet sagittis. Ultricies integer quis auctor
                 elit sed vulputate mi.</p>
               <div class="testimonialAuthor">
                 <div>
-                  <img src="./assets/testimonials/Avatar (5).svg" alt
+                  <img src="./assets/testimonials/Avatar (5).svg" alt="testimonial"
                     loading="lazy">
                 </div>
                 <div>
@@ -414,12 +414,12 @@
             <!-- 9 -->
             <div class="testimonialCard">
               <img class="testimonialCardImg"
-                src="./assets/testimonials/Rating (2).svg" alt laoding="lazy" />
+                src="./assets/testimonials/Rating (2).svg" alt="testimonial" laoding="lazy" />
               <p class="testimonialCardDescrip">Viverra accumsan in nisl nisi
                 scelerisque eu. Vitae congue eu consequat ac felis donec. </p>
               <div class="testimonialAuthor">
                 <div>
-                  <img src="./assets/testimonials/Avatar (8).svg" alt
+                  <img src="./assets/testimonials/Avatar (8).svg" alt="testimonial"
                     loading="lazy">
                 </div>
                 <div>
@@ -688,7 +688,7 @@
             alt="SlothUI logo" />
         </div>
         <div class="footerCenterImg">
-          <img src="./assets/CaretUp.svg" alt="">
+          <img src="./assets/CaretUp.svg" alt="Footer arrow icon">
         </div>
         <div>
           <p>Copyright 2028 slothUI, All Rights Reserved.</p>
