updated code for better responsive

--- a/index.html
+++ b/index.html
@@ -595,19 +595,9 @@
                 <button class="btn4">Get Started</button>
               </div>
             </div>
-            <!-- Image -->
-            <div class="downloadAppImg hiddenM" id="hiddenS">
-              <div>
-                <img class="firstPhoneImg" src="./assets/MockUp.svg"
-                  alt="phone frame" loading="lazy">
-              </div>
-              <div>
-                <img class="secondPhoneImg" src="./assets/MockUp (1).svg"
-                  alt="phone frame" loading="lazy">
-              </div>
-            </div>
-            <!-- for small -->
-            <div class="downloadAppImg " id="hiddenLarge">
+            
+            <!-- phone image -->
+            <div class="downloadAppImg ">
               <div>
                 <img class="firstPhoneImg" src="./assets/smPhone.webp"
                   alt="phone frame" loading="lazy">
